# hpdb

./: .gitignore  README.md  bumpversion.py  publish.sh  pyproject.toml  requirements.txt
hpdb/: __init__.py  dbclass.py
