[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpdb"
version = "4.0.5"
description = "Makes working with existing sql databases super easy"
readme = "README.md"
authors = [{ name = "HP Harmsen", email = "hp@harmsen.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mysql", "postgresql"]
dependencies = ["sqlalchemy", "sqlparse", "pandas"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "build", "twine"]

[project.urls]
Homepage = "https://github.com/hpharmsen/hpdb"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["hpdb"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test_hpdb"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)